--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
 
   <body>
