--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       <button id="reset">Reset</button>
     </div>
 
-    <script src="src/index.ts"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
